--- a/src/views/admin/dashboard.ejs
+++ b/src/views/admin/dashboard.ejs
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <%- include('../partials/header', { user, active: 'redirect' }) %>
+    <%- include('../partials/header', { user, active: 'redirect', breadcrumb: [{ label: 'Redirect' }] }) %>
 
     <div class="container mt-3">
         <div class="row mb-4 g-3">
