--- a/src/views/admin/domain_detail.ejs
+++ b/src/views/admin/domain_detail.ejs
@@ -16,6 +16,7 @@
     <%- include('../partials/header', {
         user,
         active: 'redirect',
+        backUrl: '/redirect',
         breadcrumb: [
             { label: 'Redirect', url: '/redirect' },
             { label: domain.domain_url }
