--- a/src/views/admin/user_detail.ejs
+++ b/src/views/admin/user_detail.ejs
@@ -9,6 +9,7 @@
     <%- include('../partials/header', {
         user: viewer,
         active: 'users',
+        backUrl: '/users',
         breadcrumb: [
             { label: 'Quản trị', url: '/users' },
             { label: 'Người dùng', url: '/users' },
