--- a/src/views/admin/users_list.ejs
+++ b/src/views/admin/users_list.ejs
@@ -9,6 +9,7 @@
     <%- include('../partials/header', {
         user,
         active: 'users',
+        backUrl: '/redirect',
         breadcrumb: [
             { label: 'Quản trị', url: '/users' },
             { label: 'Người dùng' }
