--- a/src/views/admin/welcome.ejs
+++ b/src/views/admin/welcome.ejs
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <%- include('../partials/header', { user, active: 'home' }) %>
+    <%- include('../partials/header', { user, active: 'home', breadcrumb: [{ label: 'Trang chủ' }] }) %>
     <div class="container-xxl">
         <section class="page-intro mb-4">
             <div class="row align-items-center g-4">
