--- a/src/views/admin/report.ejs
+++ b/src/views/admin/report.ejs
@@ -146,8 +146,8 @@
                                                         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                                                     </div>
                                                     <div class="modal-body">
-                                                        <div class="mb-2"><b>Referrer:</b><br><span class="text-break"><%= meta.ref || '-' %></span></div>
-                                                        <div class="mb-2"><b>Request URL:</b><br><span class="text-break"><%= meta.url || '-' %></span></div>
+                                                        <div class="mb-2"><b>Referrer:</b><br><code class="text-break d-block"><%= meta.ref || '-' %></code></div>
+                                                        <div class="mb-2"><b>Request URL:</b><br><code class="text-break d-block"><%= meta.url || '-' %></code></div>
                                                         <% if (meta.detail) { %><div class="alert alert-warning py-2 mb-0 small"><b>Chi tiết:</b> <%= meta.detail %></div><% } %>
                                                     </div>
                                                 </div>
